# edfarray

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
crates/edfarray-core/: Cargo.toml
crates/edfarray-core/src/: annotation.rs  array_proxy.rs  error.rs  file.rs  header.rs  lib.rs  mmap.rs  proxy.rs  record.rs  signal.rs
crates/edfarray-python/: Cargo.toml
crates/edfarray-python/src/: annotations.rs  array_proxy.rs  errors.rs  file.rs  lib.rs  signal.rs
docs/: index.md
docs/guide/: annotations.md  getting-started.md  performance.md  signals.md
docs/reference/: edf-format.md  python-api.md  rust-api.md
docs/stylesheets/: extra.css
edfarray/: __init__.py
edfarray/_core/: __init__.pyi
examples/: basic_usage.py  benchmark.py  benchmark_async_open.py  benchmark_paging.py
guide/annotations/: index.html
guide/getting-started/: index.html
guide/performance/: index.html
guide/signals/: index.html
reference/edf-format/: index.html
reference/python-api/: index.html
reference/rust-api/: index.html
scripts/: generate_references.py
search/: search_index.json
tests/: conftest.py  test_annotations.py  test_array_proxy.py  test_header.py  test_signals.py
tests/fixtures/: S001R01.reference.json  edfPlusC.reference.json  test_generator.reference.json  test_generator_2.reference.json
