[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "edfarray"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/edfarray-python/Cargo.toml"

[tool.uv]
dev-dependencies = ["pytest>=7", "maturin>=1.0"]
