[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "edfarray"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = ["numpy>=1.21"]
license = "MIT"
description = "A Rust-backed EDF/EDF+ file parser with numpy-like Python bindings"
readme = "README.md"

[tool.maturin]
manifest-path = "crates/edfarray-python/Cargo.toml"
module-name = "edfarray._core"
python-source = "."
python-packages = ["edfarray"]
include = ["edfarray/_core/*.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7",
    "maturin>=1.0",
    "pyedflib>=0.1.42",
    "mkdocs-material>=9.7.5",
]
