[package]
name = "edfarray-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false }
libc = "0.2.183"
log = { version = "0.4.29", default-features = false }
memmap2 = { version = "0.9.10", default-features = false }
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
proptest = "1.10.0"
tempfile = "3.27.0"
